add SendEmailForToken, GetTokenFromEmail
